fix: hide project overflow

--- a/assets/css/critical/90-project.css
+++ b/assets/css/critical/90-project.css
@@ -27,6 +27,7 @@
   border-radius: 10px;
   box-shadow: 0 0 1px var(--fg2);
   transition: all 0.3s ease;
+  overflow: hidden;
 }
 
 .grid-item:hover {
